Threaded launch, started implementing virtualThreads